@@ -1,3 +1,11 @@
+2013-01-19  Julien Bect  <julien.bect@supelec.fr>
+
+	Added a second output argument to stk_filldist_discretized().
+
+	* misc/dist/stk_filldist_discretized.m: modified. The function now
+	returns, as a second output argument, the point where the maximum
+	distance is attained, as expected by stk_filldist().
+
 2013-01-17  Julien Bect  <julien.bect@supelec.fr>
 
 	Completed the documentation of stk_fill_dist and
